k8s/infrastructure/network/gateway/Gateway.http.yaml
# https://docs.cilium.io/en/latest/network/servicemesh/gateway-api/parameterized-gatewayclass/
# https://blog.stonegarden.dev/articles/2023/12/cilium-gateway-api/
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: gateway
  # annotations:
  #   service.spec.externalTrafficPolicy: Local
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
