k8s/infrastructure/network/gateway/Gateway.yaml
# https://docs.cilium.io/en/latest/network/servicemesh/gateway-api/parameterized-gatewayclass/
# https://blog.stonegarden.dev/articles/2023/12/cilium-gateway-api/
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-dns01-issuer
spec:
  gatewayClassName: envoy-gatewayclass
  # gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: https-wc-talmox-hera-home-karlsen-fr
      protocol: HTTPS
      port: 443
      hostname: '*.talmox.hera.home.karlsen.fr'
      allowedRoutes:
        # kinds:
        #   - group: gateway.networking.k8s.io
        #     kind: HTTPRoute
        #   - group: gateway.networking.k8s.io
        #     kind: GRPCRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: talmox-hera-home-karlsen-fr-certificate

    - name: https-karlsen-fr
      protocol: HTTPS
      port: 443
      hostname: karlsen.fr
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: karlsen-fr-certificate
    - name: https-wc-karlsen-fr
      protocol: HTTPS
      port: 443
      hostname: '*.karlsen.fr'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wc-karlsen-fr-certificate

    - name: https-karlsen-org
      protocol: HTTPS
      port: 443
      hostname: karlsen.org
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: karlsen-org-certificate
    - name: https-wc-karlsen-org
      protocol: HTTPS
      port: 443
      hostname: '*.karlsen.org'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wc-karlsen-org-certificate

    - name: https-karlsen-app
      protocol: HTTPS
      port: 443
      hostname: karlsen.app
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: karlsen-app-certificate
    - name: https-wc-karlsen-app
      protocol: HTTPS
      port: 443
      hostname: '*.karlsen.app'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wc-karlsen-app-certificate

    - name: torrent-tcp
      protocol: TCP
      port: 10011
      allowedRoutes:
        namespaces:
          from: All

    - name: torrent-udp
      protocol: UDP
      port: 10011
      allowedRoutes:
        namespaces:
          from: All

# - name: tls-wc-talmox-hera-home-karlsen-fr
#   protocol: TLS
#   port: 443
#   hostname: *.talmox.hera.home.karlsen.fr'
#   allowedRoutes:
#     namespaces:
#       from: All
#   tls:
#     mode: Passthrough
