k8s/infrastructure/network/gateway/BackendTrafficPolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: internal-backend-traffic-policy
  namespace: gateway
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: Gateway, name: internal}
  rateLimit:
    global:
      rules:
        - clientSelectors: [{sourceCIDR: {type: Distinct, value: 0.0.0.0/0}}]
          limit: {requests: 500, unit: Minute}
          shared: true
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: default-backend-traffic-policy
  namespace: gateway
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: Gateway, name: default}
  rateLimit:
    global:
      rules:
        - clientSelectors: [{sourceCIDR: {type: Distinct, value: 0.0.0.0/0}}]
          limit: {requests: 300, unit: Minute}
          shared: true
