k8s/infrastructure/network/gateway/HTTPRoute.https-upgrade.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-upgrade
  namespace: gateway
spec:
  parentRefs:
    - {namespace: gateway, kind: Gateway, name: internal, sectionName: http}
    - {namespace: gateway, kind: Gateway, name: default, sectionName: http}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
