k8s/infrastructure/network/gateway/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-upgrade
  namespace: gateway
spec:
  parentRefs:
    - kind: Gateway
      name: cilium-gateway
      namespace: gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
