k8s/infrastructure/network/gateway/SecurityPolicy.yaml
# https://gateway.envoyproxy.io/docs/tasks/security/restrict-ip-access/
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: default-security-policy
  namespace: gateway
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 192.168.0.0/24  # Physical machines
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: security-policy-httproute-allow-all
  namespace: gateway
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      matchLabels:
        security-policy: httproute-allow-all
  authorization:
    defaultAction: Allow
---
# All HTTPRoutes can reference this SecurityPolicy
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-security-policy-reference
  namespace: gateway
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: '*'
  to:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: gateway
