k8s/infrastructure/network/gateway/CiliumClusterwideNetworkPolicy.yaml
# https://github.com/cilium/cilium/discussions/43932
# https://docs.cilium.io/en/latest/network/servicemesh/default-deny-ingress-policy/
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy 
metadata:
  name: deny-ingress
spec:
  description: Block all incoming traffic
  # enableDefaultDeny: {egress: false, ingress: true}
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy 
metadata:
  name: allow-lan-http
spec:
  description: Allow all incomming HTTP and HTTPS traffic from the local network
  # enableDefaultDeny: {egress: false, ingress: true}
  endpointSelector:
    matchExpressions:
      - key: reserved:ingress
        operator: Exists
  ingress:
    - fromCIDRSet:
        - cidr: 192.168.0.0/24  # Physical machines
      toPorts:
        - ports:
            - {port: '80', protocol: TCP}
            - {port: '443', protocol: TCP}
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy 
metadata:
  name: allow-all-http
spec:
  description: Allow all incoming HTTP and HTTPS traffic
  # enableDefaultDeny: {egress: false, ingress: true}
  endpointSelector:
    matchLabels:
      fr.karlen/ingress-policy: allow-all-http
  ingress:
    - fromCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - {port: '80', protocol: TCP}
            - {port: '443', protocol: TCP}
